# LearningSokol

./: CMakeLists.txt  README.md  compile_commands.json  run.sh
scripts/: compileShaders.sh
src/: includeShaders.h  include_shaders.hpp  main.cpp
src/Engine/: Engine.hpp
src/Engine/Camera/: Camera.hpp  camera.cpp
src/Engine/impl/: camera.cpp  texture.cpp
src/shaders/: compileShaders.sh  includeShaders.hpp  testShader.glsl
src/shaders/testShaders/: testShaders.glsl  testShaders.h
